fixed the logo spacing on the about page & improved link target area on the portfolio page

--- a/app/static/stylesheets/about.css
+++ b/app/static/stylesheets/about.css
@@ -40,7 +40,7 @@ img#avatar {
 /* Portrait */
 @media (max-width: 750px) and (min-width: 320px) {
 
-	img {
+	img#avatar {
 		display: block;
 		margin: 0 auto;
 	}
