--- a/app/static/stylesheets/quakes.css
+++ b/app/static/stylesheets/quakes.css
@@ -1,6 +1,6 @@
 
 article h1 {
-	color: #111111;
+	font-size: 2.75em;
 	margin-bottom: 0.25em;
 }
 article img {
